<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="end|bottom"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:hint="@string/zero"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnSeven"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:onClick="onDigit"
                android:layout_marginStart="2dp"
                android:text="@string/seven"
                />
            <Button
                android:id="@+id/btnEight"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:onClick="onDigit"
                />
            <Button
                android:id="@+id/btnNine"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:onClick="onDigit"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/nine"
                />
            <Button
                android:id="@+id/btnDivide"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/divide"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnFour"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/four"
                />
            <Button
                android:id="@+id/btnFive"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:onClick="onDigit"
                android:layout_weight="1"
                android:text="@string/five"
                />
            <Button
                android:id="@+id/btnSix"
                android:layout_height="match_parent"
                android:onClick="onDigit"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/six"
                />
            <Button
                android:id="@+id/btnMultiply"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:onClick="onDigit"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnOne"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/one"
                />
            <Button
                android:id="@+id/btnTwo"
                android:onClick="onDigit"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/two"
                />
            <Button
                android:id="@+id/btnThree"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:onClick="onDigit"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/three"
                />
            <Button
                android:id="@+id/btnMinus"
                android:onClick="onDigit"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/minus"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">
            <Button
                android:id="@+id/btnZero"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginEnd="2dp"
                android:onClick="onDigit"
                android:layout_marginStart="2dp"
                android:text="@string/zero"
                />
            <Button
                android:id="@+id/btnClear"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:onClick="onClear"
                android:layout_weight="1"
                android:text="@string/clear"
                />
            <Button
                android:id="@+id/btnPlus"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:onClick="onDigit"
                />
        </TableRow>
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnEquals"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:onClick="onDigit"
            android:text="@string/equils"
            />
    </TableRow>
    </TableLayout>

</LinearLayout>